# MoRIS

./: .gitignore  AUTHORS.md  CMakeLists.txt  INPUT_FILES_TUTORIAL.md  LICENSE.md  README.md  TUTORIAL.md
.github/workflows/: cmake.yml
cmake/: make.sh  make_clean.sh  make_debug.sh
cmake/modules/: Config.h.in
docs/: TUTORIAL.md  index.html
example/: .Rhistory  parameters.txt  run.sh  run_optimization.sh
example/input/: UMZ2006_cut2.dbf  UMZ2006_cut2.sbx  map.txt  urban2.shp
example/rscripts/: map.R  optimization.R
example_gipsy_moth/: network.txt  parameters.txt  plot.R  sample.txt
example_gipsy_moth/xlsx/: convert.py  network_OK.csv  sample_OK.csv  sample_OK.xlsx
example_gipsy_moth/xlsx/previous data/: sample_OK_v2.xlsx
example_lasius_neglectus/: .Rapp.history  map.R  map.txt  parameters.txt  plot.R  run.sh  sample.txt
example_lasius_neglectus/xlsx/: map.txt  network.csv  network.xlsx  sample.xlsx
example_lasius_neglectus_hexagons/: run.sh
example_lasius_neglectus_squares/: .Rapp.history  map.R  plot.R  run.sh
example_lasius_neglectus_squares/input/: map.txt  network.txt  parameters.txt  sample.txt
example_lasius_neglectus_squares/xlsx/: convert.py  map.csv  map.xlsx  sample.csv  sample.txt
examples/: parameters.txt  run_single_simulation.sh
examples/input/: UMZ2006_cut2.sbn  UMZ2006_cut2.shp  UMZ2006_cut2.shp.xml  UMZ2006_cut2.shx
examples/rscripts/: plot_single_simulation.R
lasius_neglectus_example/: parameters.txt
lasius_neglectus_example/input/: urban2.dbf  urban2.shx
lasius_neglectus_example/rscripts/: euclidean_distribution.R  jump_size_distribution.R  weight_distributions.R
other_examples/example_gipsy_moth/: parameters.txt  run.sh
other_examples/example_gipsy_moth/xlsx/: map.txt  map_OK.csv  map_OK.xlsx  network_OK.xlsx
other_examples/example_gipsy_moth/xlsx/previous data/: sample_OK_v1.xlsx
other_examples/example_lasius_neglectus_hexagons/: network.txt  parameters.txt
src/: MoRIS_artificial_data.cpp  MoRIS_artificial_data.py  MoRIS_evaluate.py  MoRIS_mantel_test.py  MoRIS_minimizer.py  MoRIS_minimizer2.py  MoRIS_optimize.py  MoRIS_run.cpp  mantel_test.R
src/lib/: Enums.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Parameters.cpp  Parameters.h  Prng.cpp  Prng.h  Simulation.cpp  Simulation.h
src/lib/scripts/: change_package_version.py
xcode/MoRIS/MoRIS.xcodeproj/: project.pbxproj
xcode/MoRIS/MoRIS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/MoRIS/MoRIS.xcodeproj/project.xcworkspace/xcuserdata/charlesrocabert.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/MoRIS/MoRIS.xcodeproj/xcuserdata/charlesrocabert.xcuserdatad/xcschemes/: MoRIS_artificial_data.xcscheme  MoRIS_run.xcscheme  xcschememanagement.plist
